# github-artist

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SUMMARY.md  config.example.json  github-artist.py  letters.py  logo.py  main.py  pyproject.toml
.github/workflows/: ci.yml  lint.yml
examples/: EXAMPLES.md
github_artist/: __init__.py  cli.py
github_artist/core/: __init__.py  config.py  git_ops.py  preview.py
github_artist/data/: __init__.py  characters.py
github_artist/utils/: __init__.py  dates.py
tests/: __init__.py  test_characters.py  test_config.py  test_dates.py
